--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,7 @@ button {
   color: var(--accent5);
   fill: var(--accent5);
   border: none;
-  padding: 5px 15px;
+  padding: 8px 15px;
   border-radius: 4px;
   display: inline-flex;
   align-items: center;
@@ -72,7 +72,7 @@ button > svg {
 
 input[type=text] {
   width: 100%;
-  padding: 5px;
+  padding: 8px;
   color: var(--accent5);
   background-color: var(--accent4);
   border: none;
@@ -155,7 +155,7 @@ input[type=range]:focus::-moz-range-track {
   justify-content: space-between;
   align-items: center;
   padding: 12px;
-  box-shadow: 0 0 6px var(--background1);
+  box-shadow: 0 0 8px var(--background1);
   background-color: var(--background1);
   position: fixed;
   width: 100%;
@@ -167,7 +167,7 @@ input[type=range]:focus::-moz-range-track {
 
 #sound-configs {
   padding: 12px;
-  padding-top: 60px;
+  padding-top: 64px;
   display: grid;
   grid-template-columns: 1fr;
   gap: 8px;
@@ -229,11 +229,11 @@ input[type=range]:focus::-moz-range-track {
   --accent5: var(--invalid5);
 }
 
-.sound-config.invalid .play {
+.sound-config.invalid button {
   cursor: unset;
 }
-.sound-config.invalid .play:focus,
-.sound-config.invalid .play:hover {
+.sound-config.invalid button:focus,
+.sound-config.invalid button:hover {
   background-color: var(--accent2);
   pointer-events: none;
   outline: none !important;
@@ -244,7 +244,7 @@ input[type=range]:focus::-moz-range-track {
 
 @media screen and (max-width: 640px) {
   button {
-    padding: 5px 10px;
+    padding: 8px 10px;
   }
 
   button > svg {
