--- a/src/styles.css
+++ b/src/styles.css
@@ -65,7 +65,7 @@ button:hover {
 button > svg {
   width: 16px;
   height: 16px;
-  margin-right: 4px;
+  margin: 1.5px 4px 1.5px 0;
 }
 
 /* Text inputs */
@@ -86,6 +86,17 @@ input[type=text]:focus {
 
 input[type=text]::placeholder {
   color: var(--accent6);
+}
+
+/* Number inputs */
+input[type=number] {
+  width: 60px;
+  padding: 4px;
+  color: var(--accent5);
+  background: var(--accent4);
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
 }
 
 /* Range inputs */
@@ -175,7 +186,7 @@ input[type=range]:focus::-moz-range-track {
 
 .sound-config {
   display: grid;
-  grid-template-columns: min-content 2fr min-content 1fr min-content 1fr min-content;
+  grid-template-columns: min-content 2fr min-content min-content min-content 1fr min-content 1fr min-content min-content;
   align-items: center;
   gap: 12px 8px;
   padding: 10px;
@@ -248,21 +259,24 @@ input[type=range]:focus::-moz-range-track {
     padding: 8px 10px;
   }
 
-  button > svg {
+  button:not(.remove) > svg {
     display: none;
   }
 
   .sound-config {
-    grid-template-columns: min-content min-content 1fr min-content 1fr min-content;
+    grid-template-columns: min-content min-content 1fr min-content 1fr min-content min-content;
     grid-template-areas:
-      "play sound sound sound sound copy"
-      "pitch-label pitch-label pitch volume-label volume volume";
+      "play sound sound sound sound copy copy"
+      "pitch-label pitch-label pitch volume-label volume volume remove";
   }
   .sound-config .play { grid-area: play; }
   .sound-config .sound { grid-area: sound; }
+  .sound-config .offset-label { display: none; }
+  .sound-config .offset { display: none; }
   .sound-config .pitch-label { grid-area: pitch-label; }
   .sound-config .pitch { grid-area: pitch; }
   .sound-config .volume-label { grid-area: volume-label; }
   .sound-config .volume { grid-area: volume; }
   .sound-config .copy { grid-area: copy; }
+  .sound-config .remove { grid-area: remove; }
 }
